Wed Jan 18 16:42:41 UTC 2006  Nilabja R  <nilabjar@dre.vanderbilt.edu>

        * DAnCE/NodeManager/BaseMonitor.h:Added documentation, changed
          function signature
        * DAnCE/NodeManager/CIAO_Monitor.cpp:Removed system headers
        * DAnCE/NodeManager/Monitor.mpc:Added cvs tag
        * DAnCE/NodeManager/MonitorController.cpp:Removed sleep call
        * DAnCE/NodeManager/NodeManager.mpc:Added after clause to compile
          TargetManager_stub before

        * DAnCE/TargetManager/TM_Client.mpc:Added cvs tag
        * DAnCE/TargetManager/TargetManager.mpc: Added cvs tag ,
          Removed Deployment_Configuration.cpp from TargetManager_exec

Tue Jan 17 23:52:11 UTC 2006  Stoyan Paunov  <spaunov@isis.vanderbilt.edu>

        * DAnCE/spec_RepositoryManager/Options.h:
        * DAnCE/spec_RepositoryManager/Options.cpp:
        * DAnCE/spec_RepositoryManager/RMadmin.cpp:

        Took care of the todo's that Johnny suggested. Now using ACE_Singleton
        parametrized with ACE_Null_Mutex.

Tue Jan 17 21:07:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/spec_RepositoryManager/HTTP_Client.h:
          Layout change
        * DAnCE/spec_RepositoryManager/HTTP_Handler.{h,cpp}:
          Changed bytecount_ to size_t

Tue Jan 17 21:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/spec_RepositoryManager/Options.h:
          Doxygen improvements

        * DAnCE/spec_RepositoryManager/Options.cpp:
          Layout changes and add some todo's

Tue Jan 17 19:31:56 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers.mpc

          Added a project inherit improperly removed by
          Mon Jan 16 16:22:25 UTC 2006  Nilabja R  <nilabjar@dre.vanderbilt.edu>

Mon Jan 16 19:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/spec_RepositoryManager/ZIP_Wrapper.h:
        * DAnCE/spec_RepositoryManager/URL_Parser.h: